Added jekyll credit.

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -8,7 +8,7 @@
 
       </div>
       <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a><br>Powered by <a href="http://jekyllrb.com/">Jekyll</a></small>
       </div>
     </footer>
   </div>
