Added link to homepage on posts.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-
+<a href="{{ site.baseurl }}">Back to home</a>
         <article class="markdown-body">
           <h3>{{ page.title }}</h3>
 
